Fix images being too large.

--- a/docs/assets/css/custom-styles.css
+++ b/docs/assets/css/custom-styles.css
@@ -159,7 +159,9 @@ section .content {
     background-size: cover;
 }
 
-
+img {
+    max-width: 100%;
+}
 
 textarea {
     columns: 20;
